--- a/ReadMe.html
+++ b/ReadMe.html
@@ -80,12 +80,12 @@ for <a href="http://www.haiku-os.org">Haiku</a><br />
 <p>UberTuber grabs clips from various sites and opens them in your media player while they're being downloaded. This is as close to	streaming as it gets until Haiku's MediaKit grows real streaming support.</p>
 <p>The actual work is done in the back-end, using the Python script <tt>youtube-dl</tt> which downloads the video file to your temporary folder. From there it is either played back while it gets downloaded or moved	to another location you determine in a file dialog.</p>
 <p>UberTuber monitors the system clipboard for URLs pointing to the supported websites and automatically inserts them into its URL text field. Now you just have to decide to either play or save the clip to start the download.</p>
-<p>This depends on the underlying script, which gets updated from time to time. At this moment there is support for clips from:</p>
+<p>If it works depends on the underlying script, which gets updated from time to time. At this moment there is support for clips from:</p>
 <div align="center"><p><i>YouTube, Google video, MetaCafe, DailyMotion, Yahoo video,<br />
 Photobucket, DepositFiles, Vimeo.com, blip.tv, Facebook video<br />
- Escapist magazine, and many many more sites...</i></p></div>
-<p>Youtube-dl's website has a <a href="http://rg3.github.io/youtube-dl/supportedsites.html">list of reportedly working sites</a>.
-</p>
+ Escapist magazine, and many many more sites...</i></p>
+<p>Youtube-dl's website has a list of <a href="http://rg3.github.io/youtube-dl/supportedsites.html">reportedly working sites</a>.
+</p></div>
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
@@ -112,7 +112,7 @@ The URL might fall through UberTuber's very simple test if it's from a supported
 <li><p><b>UberTuber won't play/download clips from site X.</b><br />
 Probably the website isn't supported by the <tt>youtube-dl</tt> script. Your only hope is that it has been added recently. Check the youtube-dl package for updates.</p></li>
 <li><p><b>How can I play back embedded videos?</b><br />
-In WebPositive, right-click on the black box of the embedded video and <span class="menu">Open frame in new window</span>. Now copy the URL and leave the rest to Ubertuber's clipboard monitor.</p></li>
+In WebPositive, right-click on the black box of the embedded video and <span class="menu">Open frame in new window</span>. Now copy the URL and leave the rest to UberTuber's clipboard monitor.</p></li>
 </ul>
 
 <h2>
@@ -123,7 +123,7 @@ In WebPositive, right-click on the black box of the embedded video and <span cla
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
 <a id="bugs+feedback" name="bugs+feedback">Bugreports and Feedback</a></h2>
-<p>Please use sourceforge's <a href="http://sourceforge.net/projects/ubertuber/support?source=navbar">bugreport form</a> if you experience unusual difficulties or email your general feedback to <a href="mailto:humdinger@gmail.com">me</a>.</p>
+<p>Please use sourceforge's <a href="http://sourceforge.net/projects/ubertuber/support?source=navbar">bugreport form</a> if you experience unusual difficulties or email your general feedback to <a href="mailto:humdingerb@gmail.com">me</a>.</p>
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
@@ -193,7 +193,7 @@ Still not perfect, I guess, but better...</li>
 <p><b>0.9.9</b> - <i>18-02-2014:</i></p>
 <ul>
 <li>Keep the GUI responsive while getting the clip title. The GUI used to be frozen in the first few seconds of downloading a clip.</li>
-<li>The clipboard monitored URLs are now stored in the separate settings file <tt>~/config/settings/UberTuber_monitored_sites</tt>.</li>
+<li>The clipboard monitored URLs are now stored in a node monitored settings file <tt>~/config/settings/UberTuber_monitored_sites</tt>.</li>
 <li>Added menu item to edit the UberTuber_monitored_sites settings file in the text editor.</li>
 </ul>
 
