Add a "select current folder" tot he save panel, taken from MediaConverter.
WIP: drag&drop support for Bookmarks.

--- a/ReadMe.html
+++ b/ReadMe.html
@@ -113,6 +113,9 @@ The URL might fall through UberTuber's very simple test if it's from a supported
 Probably the website isn't supported by the <tt>youtube-dl</tt> script. Your only hope is that it has been added recently. Check the youtube-dl package for updates.</p></li>
 <li><p><b>How can I play back embedded videos?</b><br />
 In WebPositive, right-click on the black box of the embedded video and <span class="menu">Open frame in new window</span>. Now copy the URL and leave the rest to UberTuber's clipboard monitor.</p></li>
+<li><p><b>Sometimes I get a General OS error.</b><br />
+This seems to be MediaPlayer's way to say that there hasn't been enough of the clip downloaded yet. It depends on the clip format and the speed of your internet connection. You can try closing the empty MediaPlayer window that pops up after the "General OS error" and press UberTuber's "Play" button once more.<br />
+The alternative is to increase the buffering time a few seconds, but that would increase the time everyone has to wait for every clip... Email me, if it happens untolerably often to you and I may consider adding an option for the buffering.</p></li>
 </ul>
 
 <h2>
