Updated ReadMe and screenshot.

--- a/ReadMe.html
+++ b/ReadMe.html
@@ -211,6 +211,8 @@ Still not perfect, I guess, but better...</li>
 <li>Simplified code a bit by avoiding youtube-dl creating .part files</li>
 <li>The clipboard monitored URLs are now stored in a node monitored settings file <tt>~/config/settings/UberTuber_monitored_sites</tt>.</li>
 <li>Added a menu item to edit the UberTuber_monitored_sites settings file in the text editor.</li>
+<li>Added a menu item to clear the text from the URL field.</li>
+<li>Added a menu item to open the current URL in the browser.</li>
 <li>Added a "Select this folder" button to the save panel.</li>
 <li>Accept dropped bookmark files (or any file with a META:url attribute).</li>
 <li>Register bookmark files as supported types of UberTuber, enabling opening "video" bookmarks of WebPositive with UberTuber.</li>
