Changed Readme to HTML-traditional to avoid error messages.

--- a/ReadMe.html
+++ b/ReadMe.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"../html-dtd/xhtml1-strict.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -73,7 +73,7 @@ tt {
 for <a href="http://www.haiku-os.org">Haiku</a><br />
 <i>by Humdinger</i></p>
 <hr />
-<p id="index"><a href="#settings">Settings</a> &mdash; <a href="#tips+tricks">Tips & Tricks</a> &mdash; <a href="#troubleshooting">Troubleshooting</a> &mdash; <a href="#download">Download</a> &mdash; <a href="#bug+feedback">Bugreports and Feedback</a> &mdash; <a href="#thanks">Thanks</a> &mdash; <a href="#history">History</a><p>
+<p id="index"><a href="#settings">Settings</a> &mdash; <a href="#tips_tricks">Tips &amp; Tricks</a> &mdash; <a href="#troubleshooting">Troubleshooting</a> &mdash; <a href="#download">Download</a> &mdash; <a href="#bug_feedback">Bugreports and Feedback</a> &mdash; <a href="#thanks">Thanks</a> &mdash; <a href="#history">History</a></p>
 </div>
 <hr />
 <p><br /></p>
@@ -105,12 +105,12 @@ UberTuber monitors the system clipboard and automatically puts a URL it recogniz
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
-<a id="tips+tricks" name="tips+tricks">Tips & Tricks</a></h2>
+<a id="tips_tricks" name="tips_tricks">Tips &amp; Tricks</a></h2>
 <ul>
 <li><p><b>How can I play back embedded videos?</b><br />
 In WebPositive, right-click on the black box of the embedded video and <span class="menu">Open frame in new window</span>. Now copy the URL and leave the rest to UberTuber's clipboard monitor.</p></li>
 <li><p><b>Can I use bookmarks?</b><br />
-UberTuber accepts a drag & dropped bookmark file (in fact any file with a META:url attribute). You can build up a library of video bookmarks while surfing with WebPositive, put them all in a folder and drag & drop one of them onto UberTuber.<br />
+UberTuber accepts a drag &amp; dropped bookmark file (in fact any file with a META:url attribute). You can build up a library of video bookmarks while surfing with WebPositive, put them all in a folder and drag &amp; drop one of them onto UberTuber.<br />
 Or you can select all your video bookmarks and use Tracker's add-on <i>FileType</i> to set UberTuber as their preferred application. Then you can start those video bookmarks in UberTuber with a doubleclick.</p></li>
 <li><p><b>What about starting from Terminal?</b><br />
 When started from the Terminal, UberTuber accepts currently only one argument: either the path to a bookmark file or the URL to a clip.
@@ -140,7 +140,7 @@ If things get out of control, you may find several stray threads of the scripts 
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
-<a id="bugs+feedback" name="bugs+feedback">Bugreports and Feedback</a></h2>
+<a id="bugs_feedback" name="bugs_feedback">Bugreports and Feedback</a></h2>
 <p>Please use sourceforge's <a href="http://sourceforge.net/projects/ubertuber/support?source=navbar">bugreport form</a> if you experience unusual difficulties or email your general feedback to <a href="mailto:humdingerb@gmail.com">me</a>.</p>
 
 <h2>
@@ -149,7 +149,7 @@ If things get out of control, you may find several stray threads of the scripts 
 <p>I have to thank Leszek Lesner for providing his MIT licensed code for <a href="http://www.zevenos.com/about/yavtd">YAVTD</a> which provided ideas and some lines of code for UberTuber.<br />
 Also thanks to Duggan from the haiku-3rdparty IRC channel for hints and help to find crashing set-backs.<br />
 And finally thanks to the people providing the <a href="http://rg3.github.com/youtube-dl">youtube-dl</a> script.</p>
-<p>If you kinda like UberTuber &ndash; or even more so if you don't &ndash; consider a <a href="http://www.haiku-inc.org/donations.html#online">donation to Haiku Inc.</a> or even better small monthly donations. This will accelerate  Haiku development and may even help getting video playback into WebPositive, so UberTuber can eventually retire.</p>
+<p>If you kinda like UberTuber &ndash; or even more so if you don't &ndash; consider a <a href="http://www.haiku-inc.org/donations.html#online">donation to Haiku Inc.</a> or even better small monthly donations. This will accelerate  Haiku development and may even help perfecting video playback into WebPositive, so UberTuber can eventually retire.</p>
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
