Localization for Dutch, German, Polish

--- a/ReadMe.html
+++ b/ReadMe.html
@@ -99,7 +99,7 @@ Photobucket, DepositFiles, Vimeo.com, blip.tv, Facebook video,<br />
 This starts playback automatically, if a valid URL is detected in the clipboard. Convenient if you run UberTuber in the background while surfing the web: just copy the link to a clip in the browser and a few seconds later your media player starts playing it back.</p></li>
 <li><p><b>Remove temporary files on quit</b><br />
 The temporary folder is emptied when you shutdown Haiku. If you watch lots of long clips, disk space may become a concern. Check this option to have all temporary files deleted as soon as you quit UberTuber.</p></li>
-<li><p><b>Edit monitored websites...</b><br />
+<li><p><b>Edit monitored URLs...</b><br />
 UberTuber monitors the system clipboard and automatically puts a URL it recognizes into its URL text box. With this menu item, you can change or add to this list of 'known' websites. It opens the settings file <tt>~/config/settings/UberTuber_monitored_sites</tt> in your text editor. Just put the distinguishing part of a site's URL in a new line and save the changes. UberTuber will immediately start recognizing the new address.</p></li>
 </ul>
 
@@ -225,6 +225,10 @@ Still not perfect, I guess, but better...</li>
 <ul>
 <li>Always make sure /tmp/ubertuber exists or there may be race conditions.</li>
 <li>Try to kill any zombi threads when aborting or exiting UberTuber.</li>
+</ul>
+<p><b>0.9.11</b> - <i>2014:</i></p>
+<ul>
+<li>Localizations for Dutch, German, Polish</li>
 </ul>
 </body>
 </html>
