--- a/ReadMe.html
+++ b/ReadMe.html
@@ -141,7 +141,7 @@ If things get out of control, you may find several stray threads of the scripts 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
 <a id="bugs_feedback" name="bugs_feedback">Bugreports and Feedback</a></h2>
-<p>Please use sourceforge's <a href="http://sourceforge.net/projects/ubertuber/support?source=navbar">bugreport form</a> if you experience unusual difficulties or email your general feedback to <a href="mailto:humdingerb@gmail.com">me</a>.</p>
+<p>Please use sourceforge's <a href="http://sourceforge.net/projects/ubertuber/support?source=navbar">bugreport form</a> if you experience unusual difficulties or email your general feedback to <a href="mailto:humdingerb@gmail.com">me</a>. Also, email me if you'd like to provide more localizations.</p>
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
@@ -226,9 +226,9 @@ Still not perfect, I guess, but better...</li>
 <li>Always make sure /tmp/ubertuber exists or there may be race conditions.</li>
 <li>Try to kill any zombi threads when aborting or exiting UberTuber.</li>
 </ul>
-<p><b>0.9.11</b> - <i>2014:</i></p>
+<p><b>0.9.11</b> - <i>15-06-2014:</i></p>
 <ul>
-<li>Localizations for Dutch, German, Polish</li>
+<li>Localizations for German, Polish.</li>
 </ul>
 </body>
 </html>
