--- a/ReadMe.html
+++ b/ReadMe.html
@@ -229,6 +229,7 @@ Still not perfect, I guess, but better...</li>
 <p><b>0.9.11</b> - <i>15-06-2014:</i></p>
 <ul>
 <li>Localizations for German, Polish.</li>
+<li>Use "--format best" as youtube-dl's "--max-quality" is deprecated.</li>
 </ul>
 </body>
 </html>
