Thanks to translators in the ReadMe.

--- a/ReadMe.html
+++ b/ReadMe.html
@@ -148,6 +148,7 @@ If things get out of control, you may find several stray threads of the scripts 
 <a id="thanks" name="thanks">Thanks</a></h2>
 <p>I have to thank Leszek Lesner for providing his MIT licensed code for <a href="http://www.zevenos.com/about/yavtd">YAVTD</a> which provided ideas and some lines of code for UberTuber.<br />
 Also thanks to Duggan from the haiku-3rdparty IRC channel for hints and help to find crashing set-backs.<br />
+Thanks to everyone that provided translations vor UberTuber.<br />
 And finally thanks to the people providing the <a href="http://rg3.github.com/youtube-dl">youtube-dl</a> script.</p>
 <p>If you kinda like UberTuber &ndash; or even more so if you don't &ndash; consider a <a href="http://www.haiku-inc.org/donations.html#online">donation to Haiku Inc.</a> or even better small monthly donations. This will accelerate  Haiku development and may even help perfecting video playback into WebPositive, so UberTuber can eventually retire.</p>
 
