Added ReadMe.md for github's sake. Updated readmes with the move to github.

--- a/ReadMe.html
+++ b/ReadMe.html
@@ -136,12 +136,12 @@ If things get out of control, you may find several stray threads of the scripts 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
 <a id="download" name="download">Download</a></h2>
-<p>UberTuber is directly available through HaikuDepot from the HaikuPorts repository.</p>
+<p>UberTuber is directly available through HaikuDepot from the HaikuPorts repository. The source is hosted at <a href="https://github.com/humdingerb/ubertuber">GitHub</a>.</p>
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
 <a id="bugs_feedback" name="bugs_feedback">Bugreports and Feedback</a></h2>
-<p>Please use sourceforge's <a href="http://sourceforge.net/projects/ubertuber/support?source=navbar">bugreport form</a> if you experience unusual difficulties or email your general feedback to <a href="mailto:humdingerb@gmail.com">me</a>. Also, email me if you'd like to provide more localizations.</p>
+<p>Please use GitHub's <a href="https://github.com/humdingerb/ubertuber/issues">issue tracker</a> if you experience unusual difficulties or email your general feedback to <a href="mailto:humdingerb@gmail.com">me</a>. Also, email me if you'd like to provide more localizations.</p>
 
 <h2>
 <a href="#"><img src="images/up.png" style="border:none;float:right" alt="index" /></a>
